tests/snapshots/examples_fixtures/errors__syntax_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/syntax_error.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E076]: UNCLOSED DELIMITER

Expected a closing `)` to match this opening `(`.

  --> examples/errors/syntax_error.flx:6:6
  |
6 | print("Hello World"
  |      ^

note: Expected `)` before this token.
  --> examples/errors/syntax_error.flx:7:1
  |
== stdout ==
<not executed>
